--- a/style.css
+++ b/style.css
@@ -160,12 +160,6 @@ main p {
   }
 }
 
-/* @media only screen and (min-width: 600px) {
-              .container-animation {
-                height: 85vh;
-              }
-            } */
-
 @media only screen and (max-width: 600px) {
   .container-animation {
     height: 100vh;
@@ -229,7 +223,6 @@ h2 {
   background-clip: text;
   display: inline-block;
   -webkit-background-clip: text;
-
 }
 /* Style the list container */
 .hobbies-list {
@@ -289,106 +282,149 @@ h2 {
   transition: all 0.3s ease;
 }
 .contact-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 999;
-    line-height: 60px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border-radius: 50%;
+  width: 55px; /* Set width and height to the same value */
+  height: 55px; /* Set width and height to the same value */
+  background-color: rgb(77, 105, 229);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .contact-button:hover {
-   filter: drop-shadow(0 0 30px rgb(255, 255, 255));
-  }
+.contact-button img {
+  max-width: 68%;
+}
 
-  .contact-form {
-    display: none;
-    position: fixed;
-    bottom: 90px;
-    right: 20px;
-    z-index: 999;
-    width: 300px;
-    background-color: #222;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    max-width: 80vw;
-    animation: fadeIn 0.4s ease-in-out;
-    border: 2px outset white;
-    color:tomato;
-  }
+.contact-button:hover {
+  filter: drop-shadow(0 0 30px rgb(30, 157, 255));
+  transform: scale(1.15);
+  transition: transform 0.4s ease;
+}
 
-  .contact-form input[type="text"],
-  .contact-form input[type="email"],
-  .contact-form textarea {
-    width: 90%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: none;
-    background-color: #444;
-    color: #fff;
-    border-radius: 5px;
-  }
+.contact-form {
+  display: none;
+  position: fixed;
+  bottom: 90px;
+  right: 20px;
+  z-index: 999;
+  width: 300px;
+  background-color: #222;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  max-width: 80vw;
+  animation: fadeIn 0.4s ease-in-out;
+  border: 2px outset white;
+  color: tomato;
+}
 
-  .contact-form textarea {
-    height: 100px;
-  }
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form textarea {
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  background-color: #444;
+  color: #fff;
+  border-radius: 5px;
+}
 
-  .contact-form input[type="submit"] {
-    width: 97%;
-    padding: 10px;
-    border: none;
-    background-color: #333;
-    color: #fff;
-    cursor: pointer;
-    border-radius: 5px;
-  }
+.contact-form textarea {
+  height: 100px;
+}
 
-  .dark-mode .contact-button {
-    background-color: #fff;
-    color: #333;
-  }
+.contact-form input[type="submit"] {
+  width: 97%;
+  padding: 10px;
+  border: none;
+  background-color: #333;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 5px;
+}
 
-  .dark-mode .contact-button:hover {
-    background-color: #ddd;
-  }
+.dark-mode .contact-button {
+  background-color: #fff;
+  color: #333;
+}
 
-  .dark-mode .contact-form {
-    background-color: #ccc;
-  }
+.dark-mode .contact-button:hover {
+  background-color: #ddd;
+}
 
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
+.dark-mode .contact-form {
+  background-color: #ccc;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
   }
-  .fadeOut {
-    animation: fadeut 0.4s ease-in-out;
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
-  @keyframes fadeut {
-    from {
-      opacity: 1;
-      transform: translateY(0);
-    }
-    to {
-      opacity: 0;
-      transform: translateY(20px);
-    }
+}
+.fadeOut {
+  animation: fadeut 0.4s ease-in-out;
+}
+@keyframes fadeut {
+  from {
+    opacity: 1;
+    transform: translateY(0);
   }
-  .contacts{
-    display: flex;
-    justify-content: space-between;
+  to {
+    opacity: 0;
+    transform: translateY(20px);
   }
-  .contacts img{
-    width: 40px;
-    height: 40px;
+}
+.contacts {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+.contacts img {
+  width: 40px;
+  height: 40px;
+}
+.contacts img:hover {
+  filter: brightness(90%) drop-shadow(0 0 8px rgb(33, 249, 17));
+}
+.download-button {
+  background-color: #4f46e5;
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.download-button:hover {
+  background-color: #655cea;
+  transform: translateY(-5px);
+  box-shadow: 0 5px 5px #f5f5f5;
+  transition: all 0.3s ease-in-out;
+}
+
+.resume-image {
+  width: 20px; /* Adjust as needed */
+  height: 20px; /* Adjust as needed */
+  margin-left: 5px; /* Adjust as needed */
+  vertical-align: middle;
+}
+
+@media only screen and (max-width: 480px) {
+  .contact-button {
+    width: 50px;
+    height: 50px;
   }
-  .contacts img:hover{
-    filter: brightness(90%) drop-shadow(0 0 8px rgb(33, 249, 17));
-  }
+}
